--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Drawflow</title>
 </head>
+
 <body>
   <script src="drawflow.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
+    integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="src/drawflow.css" />
   <link rel="stylesheet" type="text/css" href="docs/beautiful.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
@@ -19,7 +23,8 @@
 
   <header>
     <h2>Drawflow</h2>
-    <div class="github-link"><a href="https://github.com/jerosoler/Drawflow" target="_blank"><i class="fab fa-github fa-3x"></i></a></div>
+    <div class="github-link"><a href="https://github.com/jerosoler/Drawflow" target="_blank"><i
+          class="fab fa-github fa-3x"></i></a></div>
   </header>
   <div class="wrapper">
     <div class="col">
@@ -28,10 +33,10 @@
       </div>
       <div class="drag-drawflow" draggable="true" ondragstart="drag(event)" data-node="projector">
         <span>Projector</span>
-      </div>   
+      </div>
       <div class="drag-drawflow" draggable="true" ondragstart="drag(event)" data-node="audiomatrix">
         <span>Audio Matrix</span>
-      </div> 
+      </div>
 
     </div>
     <div class="col-right">
@@ -49,7 +54,8 @@
         <div class="btn-clear" onclick="editor.clearModuleSelected()">Clear</div>
         <div class="btn-lock">
           <i id="lock" class="fas fa-lock" onclick="editor.editor_mode='fixed'; changeMode('lock');"></i>
-          <i id="unlock" class="fas fa-lock-open" onclick="editor.editor_mode='edit'; changeMode('unlock');" style="display:none;"></i>
+          <i id="unlock" class="fas fa-lock-open" onclick="editor.editor_mode='edit'; changeMode('unlock');"
+            style="display:none;"></i>
         </div>
         <div class="bar-zoom">
           <i class="fas fa-search-minus" onclick="editor.zoom_out()"></i>
@@ -69,15 +75,15 @@
     editor.force_first_input = false;
     var currentNodeId = 0;
 
-  /*
-    editor.createCurvature = function(start_pos_x, start_pos_y, end_pos_x, end_pos_y, curvature_value, type) {
-      var center_x = ((end_pos_x - start_pos_x)/2)+start_pos_x;
-      return ' M ' + start_pos_x + ' ' + start_pos_y + ' L '+ center_x +' ' +  start_pos_y  + ' L ' + center_x + ' ' +  end_pos_y  + ' L ' + end_pos_x + ' ' + end_pos_y;
-    }*/
+    /*
+      editor.createCurvature = function(start_pos_x, start_pos_y, end_pos_x, end_pos_y, curvature_value, type) {
+        var center_x = ((end_pos_x - start_pos_x)/2)+start_pos_x;
+        return ' M ' + start_pos_x + ' ' + start_pos_y + ' L '+ center_x +' ' +  start_pos_y  + ' L ' + center_x + ' ' +  end_pos_y  + ' L ' + end_pos_x + ' ' + end_pos_y;
+      }*/
 
 
 
-    
+
 
     //const dataToImport =  {"drawflow": {"Home": {"data": ""}}}
     editor.start();
@@ -85,35 +91,35 @@
 
 
 
-  /*
-    var welcome = `
-    <div>
-      <div class="title-box">👏 Welcome!!</div>
-      <div class="box">
-        <p>Simple flow library <b>demo</b>
-        <a href="https://github.com/jerosoler/Drawflow" target="_blank">Drawflow</a> by <b>Jero Soler</b></p><br>
-
-        <p>Multiple input / outputs<br>
-           Data sync nodes<br>
-           Import / export<br>
-           Modules support<br>
-           Simple use<br>
-           Type: Fixed or Edit<br>
-           Events: view console<br>
-           Pure Javascript<br>
-        </p>
-        <br>
-        <p><b><u>Shortkeys:</u></b></p>
-        <p>🎹 <b>Delete</b> for remove selected<br>
-        💠 Mouse Left Click == Move<br>
-        ❌ Mouse Right == Delete Option<br>
-        🔍 Ctrl + Wheel == Zoom<br>
-        📱 Mobile support<br>
-        ...</p>
+    /*
+      var welcome = `
+      <div>
+        <div class="title-box">👏 Welcome!!</div>
+        <div class="box">
+          <p>Simple flow library <b>demo</b>
+          <a href="https://github.com/jerosoler/Drawflow" target="_blank">Drawflow</a> by <b>Jero Soler</b></p><br>
+  
+          <p>Multiple input / outputs<br>
+             Data sync nodes<br>
+             Import / export<br>
+             Modules support<br>
+             Simple use<br>
+             Type: Fixed or Edit<br>
+             Events: view console<br>
+             Pure Javascript<br>
+          </p>
+          <br>
+          <p><b><u>Shortkeys:</u></b></p>
+          <p>🎹 <b>Delete</b> for remove selected<br>
+          💠 Mouse Left Click == Move<br>
+          ❌ Mouse Right == Delete Option<br>
+          🔍 Ctrl + Wheel == Zoom<br>
+          📱 Mobile support<br>
+          ...</p>
+        </div>
       </div>
-    </div>
-    `;
-*/
+      `;
+  */
 
 
     //editor.addNode(name, "typenode": false,  inputs, outputs, posx, posy, class, data, html);
@@ -122,58 +128,58 @@
     */
 
     // Events!
-    editor.on('nodeCreated', function(id) {
+    editor.on('nodeCreated', function (id) {
       console.log("Node created " + id);
     })
 
-    editor.on('nodeRemoved', function(id) {
+    editor.on('nodeRemoved', function (id) {
       console.log("Node removed " + id);
     })
 
-    editor.on('nodeSelected', function(id) {
+    editor.on('nodeSelected', function (id) {
       console.log("Node selected " + id);
       currentNodeId = id;
     })
 
-    editor.on('moduleCreated', function(name) {
+    editor.on('moduleCreated', function (name) {
       console.log("Module Created " + name);
     })
 
-    editor.on('moduleChanged', function(name) {
+    editor.on('moduleChanged', function (name) {
       console.log("Module Changed " + name);
     })
 
-    editor.on('connectionCreated', function(connection) {
+    editor.on('connectionCreated', function (connection) {
       console.log('Connection created');
       console.log(connection);
     })
 
-    editor.on('connectionRemoved', function(connection) {
+    editor.on('connectionRemoved', function (connection) {
       console.log('Connection removed');
       console.log(connection);
     })
-/*
-    editor.on('mouseMove', function(position) {
-      console.log('Position mouse x:' + position.x + ' y:'+ position.y);
-    })
-*/
-    editor.on('nodeMoved', function(id) {
+    /*
+        editor.on('mouseMove', function(position) {
+          console.log('Position mouse x:' + position.x + ' y:'+ position.y);
+        })
+    */
+    editor.on('nodeMoved', function (id) {
       console.log("Node moved " + id);
     })
 
-    editor.on('zoom', function(zoom) {
+    editor.on('zoom', function (zoom) {
       console.log('Zoom level ' + zoom);
     })
 
-    editor.on('translate', function(position) {
-      console.log('Translate x:' + position.x + ' y:'+ position.y);
+    editor.on('translate', function (position) {
+      console.log('Translate x:' + position.x + ' y:' + position.y);
     })
 
-    editor.on('addReroute', function(id) {
+    editor.on('addReroute', function (id) {
       console.log("Reroute added " + id);
     })
 
-    editor.on('removeReroute', function(id) {
+    editor.on('removeReroute', function (id) {
       console.log("Reroute removed " + id);
     })
     /* DRAG EVENT */
@@ -184,16 +190,16 @@
     for (var i = 0; i < elements.length; i++) {
       elements[i].addEventListener('touchend', drop, false);
       elements[i].addEventListener('touchmove', positionMobile, false);
-      elements[i].addEventListener('touchstart', drag, false );
+      elements[i].addEventListener('touchstart', drag, false);
     }
 
     var mobile_item_selec = '';
     var mobile_last_move = null;
-   function positionMobile(ev) {
-     mobile_last_move = ev;
-   }
+    function positionMobile(ev) {
+      mobile_last_move = ev;
+    }
 
-   function allowDrop(ev) {
+    function allowDrop(ev) {
       ev.preventDefault();
     }
 
@@ -201,14 +207,14 @@
       if (ev.type === "touchstart") {
         mobile_item_selec = ev.target.closest(".drag-drawflow").getAttribute('data-node');
       } else {
-      ev.dataTransfer.setData("node", ev.target.getAttribute('data-node'));
+        ev.dataTransfer.setData("node", ev.target.getAttribute('data-node'));
       }
     }
 
     function drop(ev) {
       if (ev.type === "touchend") {
-        var parentdrawflow = document.elementFromPoint( mobile_last_move.touches[0].clientX, mobile_last_move.touches[0].clientY).closest("#drawflow");
-        if(parentdrawflow != null) {
+        var parentdrawflow = document.elementFromPoint(mobile_last_move.touches[0].clientX, mobile_last_move.touches[0].clientY).closest("#drawflow");
+        if (parentdrawflow != null) {
           addNodeToDrawFlow(mobile_item_selec, mobile_last_move.touches[0].clientX, mobile_last_move.touches[0].clientY);
         }
         mobile_item_selec = '';
@@ -221,21 +227,21 @@
     }
 
     function addNodeToDrawFlow(name, pos_x, pos_y) {
-      if(editor.editor_mode === 'fixed') {
+      if (editor.editor_mode === 'fixed') {
         return false;
       }
-      pos_x = pos_x * ( editor.precanvas.clientWidth / (editor.precanvas.clientWidth * editor.zoom)) - (editor.precanvas.getBoundingClientRect().x * ( editor.precanvas.clientWidth / (editor.precanvas.clientWidth * editor.zoom)));
-      pos_y = pos_y * ( editor.precanvas.clientHeight / (editor.precanvas.clientHeight * editor.zoom)) - (editor.precanvas.getBoundingClientRect().y * ( editor.precanvas.clientHeight / (editor.precanvas.clientHeight * editor.zoom)));
+      pos_x = pos_x * (editor.precanvas.clientWidth / (editor.precanvas.clientWidth * editor.zoom)) - (editor.precanvas.getBoundingClientRect().x * (editor.precanvas.clientWidth / (editor.precanvas.clientWidth * editor.zoom)));
+      pos_y = pos_y * (editor.precanvas.clientHeight / (editor.precanvas.clientHeight * editor.zoom)) - (editor.precanvas.getBoundingClientRect().y * (editor.precanvas.clientHeight / (editor.precanvas.clientHeight * editor.zoom)));
 
 
       switch (name) {
         case 'videomatrix':
-        var videomatrix = `
+          var videomatrix = `
         <div>
           <div class="title-box"><i class="fab fa-facebook"></i> Facebook Message</div>
         </div>
         `;
-          editor.addNode('videomatrix', 0,  1, pos_x, pos_y, 'videomatrix', {}, videomatrix );
+          editor.addNode('videomatrix', 0, 1, pos_x, pos_y, 'videomatrix', {}, videomatrix);
           break;
         case 'projector':
           var projector = `
@@ -243,8 +249,8 @@
             <div class="title-box"><i class="fab fa-slack"></i> Slack chat message</div>
           </div>
           `
-          editor.addNode('projector', 1, 0, pos_x, pos_y, 'projector', {}, projector );
-          break;   
+          editor.addNode('projector', 1, 0, pos_x, pos_y, 'projector', {}, projector);
+          break;
         case 'audiomatrix':
           var audiomatrix = `
           <div>
@@ -259,94 +265,89 @@
                 <option value="4">4</option>
               </select>
             </div>
+            <div class="box">
+              <p>Outputs</p>
+              <select df-channel id="audioMatrixOutputs" onchange="setOutputs()">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+              </select>
+            </div>
           </div>
           `;
-          editor.addNode('audiomatrix', 0, 0, pos_x, pos_y, 'audiomatrix', {}, audiomatrix );
-          break;    
+          editor.addNode('audiomatrix', 0, 0, pos_x, pos_y, 'audiomatrix', {}, audiomatrix);
+          break;
         default:
       }
     }
 
-  var transform = '';
-  function showpopup(e) {
-    e.target.closest(".drawflow-node").style.zIndex = "9999";
-    e.target.children[0].style.display = "block";
-    //document.getElementById("modalfix").style.display = "block";
+    var transform = '';
+    function showpopup(e) {
+      e.target.closest(".drawflow-node").style.zIndex = "9999";
+      e.target.children[0].style.display = "block";
+      //document.getElementById("modalfix").style.display = "block";
 
-    //e.target.children[0].style.transform = 'translate('+translate.x+'px, '+translate.y+'px)';
-    transform = editor.precanvas.style.transform;
-    editor.precanvas.style.transform = '';
-    editor.precanvas.style.left = editor.canvas_x +'px';
-    editor.precanvas.style.top = editor.canvas_y +'px';
-    console.log(transform);
+      //e.target.children[0].style.transform = 'translate('+translate.x+'px, '+translate.y+'px)';
+      transform = editor.precanvas.style.transform;
+      editor.precanvas.style.transform = '';
+      editor.precanvas.style.left = editor.canvas_x + 'px';
+      editor.precanvas.style.top = editor.canvas_y + 'px';
+      console.log(transform);
 
-    //e.target.children[0].style.top  =  -editor.canvas_y - editor.container.offsetTop +'px';
-    //e.target.children[0].style.left  =  -editor.canvas_x  - editor.container.offsetLeft +'px';
-    editor.editor_mode = "fixed";
+      //e.target.children[0].style.top  =  -editor.canvas_y - editor.container.offsetTop +'px';
+      //e.target.children[0].style.left  =  -editor.canvas_x  - editor.container.offsetLeft +'px';
+      editor.editor_mode = "fixed";
 
-  }
-
-   function closemodal(e) {
-     e.target.closest(".drawflow-node").style.zIndex = "2";
-     e.target.parentElement.parentElement.style.display  ="none";
-     //document.getElementById("modalfix").style.display = "none";
-     editor.precanvas.style.transform = transform;
-       editor.precanvas.style.left = '0px';
-       editor.precanvas.style.top = '0px';
-      editor.editor_mode = "edit";
-   }
-
-   function setInputs(e) {
-    var nodeId = editor.getNodesFromName('audiomatrix')[0];
-    var node = editor.getNodeFromId(nodeId.toString());
-
-    var numOldInputs = Object.keys(node.inputs).length;
-    console.log('Current num inputs ' + numOldInputs);
-
-    for (let i = numOldInputs; i >= 1; i--) {
-      editor.removeNodeInput(currentNodeId.toString(), 'input_' + i);      
     }
 
-    // if(numOldInputs > 0) {
-    //   Object.keys(node.inputs).forEach(function(input){
-    //     console.log('Removing Input ' + input);
-    //     editor.removeNodeInput(currentNodeId.toString(), input);
-    //   });
-    // }
+    function closemodal(e) {
+      e.target.closest(".drawflow-node").style.zIndex = "2";
+      e.target.parentElement.parentElement.style.display = "none";
+      //document.getElementById("modalfix").style.display = "none";
+      editor.precanvas.style.transform = transform;
+      editor.precanvas.style.left = '0px';
+      editor.precanvas.style.top = '0px';
+      editor.editor_mode = "edit";
+    }
 
+    function setInputs(e) {
+      var node = editor.getNodeFromId(currentNodeId.toString());
 
-    
-    var numNewInputs = parseInt(document.getElementById("audioMatrixInputs").value);
-    if(numNewInputs > 0) {
+      removeAllInputs(node);
+
+      var numNewInputs = parseInt(document.getElementById("audioMatrixInputs").value);
       addInputs(numNewInputs);
-    }    
-   }
+    }
 
-   function addInputs(numInputs) {
-    console.log("Adding " + numInputs + " inputs to Audio Matrix ID" + currentNodeId.toString());   
-    for (var i = 1; i <= numInputs; i++) {        
-         editor.addNodeInput(currentNodeId.toString());
-       }    
-   }
+    function addInputs(numInputs) {
+      console.log("Adding " + numInputs + " inputs to Audio Matrix ID" + currentNodeId.toString());
+      for (var i = 1; i <= numInputs; i++) {
+        editor.addNodeInput(currentNodeId.toString());
+      }
+    }
 
-   function removeAllInputs(id) {
-    for (var i = 1; i <= numInputs; i++) {        
-         editor.addNodeInput(currentNodeId.toString());
-       }    
-   }
+    function removeAllInputs(node) {
+      var numOldInputs = Object.keys(node.inputs).length;
+
+      for (let i = numOldInputs; i >= 1; i--) {
+        editor.removeNodeInput(currentNodeId.toString(), 'input_' + i);
+      }
+    }
 
     function changeModule(event) {
       var all = document.querySelectorAll(".menu ul li");
-        for (var i = 0; i < all.length; i++) {
-          all[i].classList.remove('selected');
-        }
+      for (var i = 0; i < all.length; i++) {
+        all[i].classList.remove('selected');
+      }
       event.target.classList.add('selected');
     }
 
     function changeMode(option) {
 
-    //console.log(lock.id);
-      if(option == 'lock') {
+      //console.log(lock.id);
+      if (option == 'lock') {
         lock.style.display = 'none';
         unlock.style.display = 'block';
       } else {
@@ -358,4 +359,5 @@
 
   </script>
 </body>
+
 </html>
